# 2d-lbm-dem

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  authors.md  benchmark.job  benchmark.xml  circle.yml  license.md  plot.py  submit_k80
.circleci/: config.yml
src/: main.c  visit_writer.c  visit_writer.h
